--- a/MonolithApi/appsettings.json
+++ b/MonolithApi/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Server=localhost;Port=5432;Database=MonolithDb;UserId=postgres;Password=210199**;"
+    //Only for local build
+    "LocalDataContext": "Server=localhost;Port=5432;Database=MonolithDb;UserId=postgres;Password=210199**;",
+
+    "DataContext": "Server=db;Port=5432;Database=MonolithDb;UserId=postgres;Password=210199**;"
   }
 }
