Configuring project in order to put it in docker

--- a/MonolithApi/appsettings.json
+++ b/MonolithApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Server=db;Port=5432;Database=MonolithDb;User Id=postgres;Password=210199**;",
+    "DockerDataContext": "Server=db;Port=5432;Database=MonolithDb;User Id=postgres;Password=210199**;",
     "LocalDataContext": "Server=localhost;Port=5432;Database=MonolithDb;User Id=postgres;Password=210199**;",
     "DockerDbContext": "Server=localhost;Port=5433;Database=MonolithDb;User Id=postgres;Password=210199**;"
   }
