--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,27 @@
 ﻿version: '3'
 services:
-  apache:
-    image: httpd:latest
-    container_name: my-apache-app
-    ports:
-    - '8080:80'
-
   db:
     image: postgres:latest
-   # container_name: postgres-container
+    container_name: postgres-container
     environment:
       POSTGRES_DB: MonolithDb
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 210199**
-  #  expose:
-   #   - "5432"
+    expose:
+      - "5432"
     volumes:
       - ./data:/data/db
     ports:
-      - "5433:5432"
+      - "5432:5432"
 
- 
+  api:
+   restart: always
+   container_name: monolyth-api-container
+   build:
+       context: .
+       dockerfile: Dockerfile
+   ports:
+     - "4000:80"
+   depends_on:
+     - db
+   command: ["dotnet", "MonolithApi.dll"]
